--- a/UwpLauncher/UwpLauncher.csproj
+++ b/UwpLauncher/UwpLauncher.csproj
@@ -130,6 +130,10 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\x64\Debug\CppGame.exe">
+      <Link>CppGame.exe</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
