--- a/UwpLauncher/UwpLauncher.csproj
+++ b/UwpLauncher/UwpLauncher.csproj
@@ -130,6 +130,10 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\UwpGame\bin\x64\Debug\UwpGame.exe">
+      <Link>UwpGame.exe</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="..\x64\Debug\CppGame.exe">
       <Link>CppGame.exe</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
