--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .vs/
-UwpGame/bin/
+CppGame/Debug/
+CppGame/Release/
+CppGame/x64/
 UwpGame/obj/
-UwpLauncher/bin/
 UwpLauncher/obj/
 WapStoreApp/bin/
 WapStoreApp/obj/
-CppGame/x64/
 x64/
+x86/
